--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "release-test",
+  "name": "dl-release-test",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,5 +8,11 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "release-it": "^16.1.5"
+  },
+  "npm": {
+    "publish": true
+  }
 }
