--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dl-release-test",
-  "version": "1.9.1",
+  "version": "1.10.0-0",
   "description": "",
   "main": "index.js",
   "scripts": {
