--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dl-release-test",
-  "version": "15.2.0",
+  "version": "15.2.1-0",
   "description": "",
   "main": "index.js",
   "scripts": {
